Bug 92921 - [Chromium] WebViewImpl::showTouchHighlightQuads isn't needed for Android
Summary: [Chromium] WebViewImpl::showTouchHighlightQuads isn't needed for Android
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Adam Barth
URL:
Keywords:
Depends on:
Blocks: 66687
  Show dependency treegraph
 
Reported: 2012-08-01 16:32 PDT by Adam Barth
Modified: 2012-08-02 09:48 PDT (History)
4 users (show)

See Also:


Attachments
Patch (3.18 KB, patch)
2012-08-01 16:34 PDT, Adam Barth
no flags Details | Formatted Diff | Diff
Patch (3.79 KB, patch)
2012-08-01 16:55 PDT, Adam Barth
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Adam Barth 2012-08-01 16:32:59 PDT
[Chromium] WebViewImpl::showTouchHighlightQuads isn't needed for Android
Comment 1 Adam Barth 2012-08-01 16:34:39 PDT
Created attachment 155919 [details]
Patch
Comment 2 WebKit Review Bot 2012-08-01 16:47:48 PDT
Comment on attachment 155919 [details]
Patch

Attachment 155919 [details] did not pass chromium-ews (chromium-xvfb):
Output: http://queues.webkit.org/results/13403773
Comment 3 Adam Barth 2012-08-01 16:55:36 PDT
Created attachment 155924 [details]
Patch
Comment 4 WebKit Review Bot 2012-08-02 09:48:49 PDT
Comment on attachment 155924 [details]
Patch

Clearing flags on attachment: 155924

Committed r124471: <http://trac.webkit.org/changeset/124471>
Comment 5 WebKit Review Bot 2012-08-02 09:48:53 PDT
All reviewed patches have been landed.  Closing bug.