[Chromium] WebViewImpl::showTouchHighlightQuads isn't needed for Android https://bugs.webkit.org/show_bug.cgi?id=92921

Reviewed by Nate Chapin.

We originally added a stub implementation of this function to make
merging detectContentOnTouch easier, but showTouchHighlightQuads is
being removed from the chromium-android branch in favor of the code in
https://bugs.webkit.org/show_bug.cgi?id=84487. This patch removes the
stub.

* src/WebViewImpl.cpp:
(WebKit::WebViewImpl::detectContentIntentOnTouch):
* src/WebViewImpl.h:
(WebViewImpl):


Canonical link: https://commits.webkit.org/110842@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124471 268f45cc-cd09-0410-ab3c-d52691b4dbfc