Source/WebKit/chromium/src/WebViewImpl.cpp
@@ -228,16 +228,6 @@ static Vector<PageGroupLoadDeferrer*>& pageGroupLoadDeferrerStack()
     return deferrerStack;
 }
 
-#if ENABLE(TOUCH_EVENTS)
-static Color tapHighlightColorForNode(const Node* node)
-{
-    Color tapHighlightColor = RenderStyle::initialTapHighlightColor().rgb();
-    if (node && node->renderer())
-        tapHighlightColor = node->renderer()->style()->tapHighlightColor().rgb();
-    return tapHighlightColor;
-}
-#endif
-
 // Ensure that the WebDragOperation enum values stay in sync with the original
 // DragOperation constants.
 #define COMPILE_ASSERT_MATCHING_ENUM(coreName) \
@@ -3830,12 +3820,6 @@ WebGraphicsContext3D* WebViewImpl::sharedGraphicsContext3D()
     return GraphicsContext3DPrivate::extractWebGraphicsContext3D(SharedGraphicsContext3D::get().get());
 }
 
-void WebViewImpl::showTouchHighlightQuads(const WebVector<WebFloatQuad>& highlight, WebColor highlightColor)
-{
-    // FIXME: Upstream this function from the chromium-android branch.
-    notImplemented();
-}
-
 void WebViewImpl::selectAutofillSuggestionAtIndex(unsigned listIndex)
 {
     if (m_autofillPopupClient && listIndex < m_autofillPopupClient->getSuggestionsCount())
@@ -3865,11 +3849,6 @@ bool WebViewImpl::detectContentIntentOnTouch(const WebPoint& position, WebInputE
         focusedFrame()->selectRange(content.range());
         return true;
     }
-
-    // Temporarily highlight the content as we do with links.
-    Color tapHighlightColor = tapHighlightColorForNode(touchHit.innerNode());
-    WebVector<WebFloatQuad> quads = content.range().textQuads();
-    showTouchHighlightQuads(quads, tapHighlightColor.rgb());
 
     m_client->scheduleContentIntent(content.intent());
     return true;
